# BlackMagic-X

./: .gitignore  CMakeLists.txt  README.md  filter.py
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
backup/: .firebaserc
backup/public/: index.html  main.js
backup/public/wasm/: engine.js  engine.wasm
backup/src/: engine.cpp
public/: index.html  main.js  style.css
user/: new
